<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    tools:ignore="MergeRootFrame"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bugs_by_status"
            android:id="@+id/textView2"
            android:textColor="@color/gray"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"
            android:id="@+id/pieView"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trending_by_status"
            android:id="@+id/textView"
            android:textColor="@color/gray"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bugs_by_priority"
            android:id="@+id/textView3"
            android:textColor="@color/gray"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray" />
    </LinearLayout>
</FrameLayout>
