<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity"
    tools:ignore="MergeRootFrame"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTitle"
            android:layout_gravity="left"
            android:hint="@string/text_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:weightSum="1"
        android:layout_marginTop="50dp"
        >

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerStatus"
            android:layout_weight=".5"
            android:prompt="@string/status_prompt"

            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/spinnerPriority"
            android:layout_weight=".5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDescription"
            android:layout_gravity="left"
            android:hint="@string/text_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="bottom"
        android:layout_marginBottom="150dp">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerWhen"
            android:layout_weight=".5" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerClock"
            android:layout_weight=".5"
            android:layout_gravity="right" />
    </LinearLayout>

</FrameLayout>
